<resources>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="app_name">PingMeSafe</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or_sign_in_with_email">------------- or Sign in with Email -------------</string>
    <string name="email">Email</string>
    <string name="passsword">Passsword</string>
    <string name="mail_abc_com">mail@abc.com</string>
    <string name="passwordHint">**************</string>
    <string name="new_to_pingmesafe">New to PingMeSafe?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="emergency">EMERGENCY</string>
    <string name="disasterrecovery">Disaster Recovery</string>
    <string name="prepare_for_disaster">Prepare For Disaster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="becomeaware">BecomeAware</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="OpenDrawer">open navigation drawer</string>
    <string name="CloseDrawer">close navigation drawer</string>
    <string name="pingmesafe">PingMeSafe</string>
    <string name="toggle_drawer">Toggle Drawer</string>
    <string name="map">Map</string>
    <string name="register_a_disaster_shelter">Register a Disaster Shelter</string>
    <string name="contribute">Contribute</string>
    <string name="about_us">About us</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="register_a_shelter">Register a Shelter</string>
    <string name="locate_shelters">Locate Shelters</string>
    <string name="training_amp_education"><![CDATA[Training & Education]]></string>
    <string name="home_safety_tips">Home Safety Tips</string>
    <string name="hazard_mitigation">Hazard Mitigation</string>
    <string name="preparedness_videos">Preparedness Videos</string>
    <string name="resources">Resources</string>
    <string name="reportincident">ReportIncident</string>
    <string name="donate">Donate</string>
    <string name="are_you_sure_you_want_to_continue">Are you sure you want to \n\t\t\t\t\t\t\t\t\tcontinue?</string>
    <string name="caution_the_sos_button_is_for_emergencies_only_please_use_it_responsibly_and_only_when_you_are_in_immediate_danger_and_require_urgent_assistance_false_alarms_can_delay_help_for_those_who_need_it_most_your_safety_is_our_top_priority">Caution: The SOS button is for emergencies only. Please use it responsibly and only when you are in immediate danger and require urgent assistance. False alarms can delay help for those who need it most. Your safety is our top priority.</string>
    <string name="enter_name">Enter Name</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="enter_sos_message">Enter SOS Message</string>
    <string name="name">Name</string>
    <string name="latitude">Latitude</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="admin_email_com">admin@email.com</string>
    <string name="google">Google</string>
    <string name="Register_for_an_account">Register for account\n</string>
    <string name="an_open_source_disaster_recovery_and_management_app"><![CDATA[An open source disaster recovery and management app]]></string>
    <string name="home">Home</string>
    <string name="email_id">Email ID</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dob">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="phnum">Phone Number</string>
    <string name="pass">Password</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="default_web_client_id">AIzaSyCt2KyIevDcsCf5enEwQM1c_Jarwy75qVw</string>

</resources>