<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">



        <group
            android:checkableBehavior="single">
            <item
                android:id="@+id/itemMap"
                android:icon="@drawable/map_foreground"
                android:title="@string/map"
                android:actionLayout="@layout/space_layout" />
        </group>


        <group
            android:checkableBehavior="single">
            <item
                android:id="@+id/itemBecomeAware"
                android:icon="@drawable/person_foreground"
                android:title="@string/becomeaware"
                android:actionLayout="@layout/space_layout" />
        </group>


        <group
            android:checkableBehavior="single">
            <item
                android:id="@+id/itemRegisterShelter"
                android:icon="@drawable/person_foreground"
                android:title="@string/register_a_shelter"
                android:actionLayout="@layout/space_layout" />
        </group>

        <group
            android:checkableBehavior="single">
            <item
                android:id="@+id/itemEmergencyContacts"
                android:icon="@drawable/person_foreground"
                android:title="@string/emergency_contacts"
                android:actionLayout="@layout/space_layout" />
        </group>

        <group
            android:checkableBehavior="single">
            <item android:id="@+id/itemContribute"
                android:icon="@drawable/person_foreground"
                android:title="@string/contribute"
                android:actionLayout="@layout/space_layout" />
        </group>

        <group
            android:checkableBehavior="single">
            <item android:id="@+id/itemAboutUs"
                android:icon="@drawable/person_foreground"
                android:title="@string/about_us"
                android:actionLayout="@layout/space_layout" />
        </group>







</menu>