<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@drawable/rounded_box">

    <ScrollView
        android:id="@+id/scrollview_register"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fadeScrollbars="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/register"
                android:fontFamily="@font/sourcesanssemibold"
                android:textSize="@dimen/_20ssp"
                android:textColor="@color/colortext"
                android:layout_marginBottom="@dimen/_20sdp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fitsSystemWindows="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/text_fname"
                        app:layout_constraintBottom_toTopOf="@id/edt_fname_register"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name"
                        android:fontFamily="@font/sourcesanssemibold"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/colortext"
                        android:layout_marginStart="@dimen/_5sdp"/>

                    <EditText
                        android:id="@+id/edt_fname_register"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="0dp"
                        android:lines="1"
                        android:textCursorDrawable="@color/black"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:layout_height="@dimen/_50sdp"
                        android:textColor="@color/colortext"
                        android:textColorHint="@color/colorHint"
                        android:hint="@string/first_name"
                        android:ems="8"
                        android:background="@drawable/squared_corner_input_box"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/ubunturegular"
                        android:padding="@dimen/_10sdp"
                        android:autofillHints="" />

                    <TextView
                        android:id="@+id/text_lname"
                        app:layout_constraintBottom_toTopOf="@id/edt_lname_register"
                        app:layout_constraintStart_toEndOf="@id/text_fname"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name"
                        android:fontFamily="@font/sourcesanssemibold"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/colortext"
                        android:layout_marginStart="@dimen/_5sdp"/>

                    <EditText
                        android:id="@+id/edt_lname_register"
                        app:layout_constraintStart_toEndOf="@id/edt_fname_register"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_width="0dp"
                        android:lines="1"
                        android:inputType="textPersonName"
                        android:textCursorDrawable="@color/black"
                        android:singleLine="true"
                        android:layout_height="@dimen/_50sdp"
                        android:ems="8"
                        android:textColor="@color/colortext"
                        android:textColorHint="@color/colorHint"
                        android:hint="@string/last_name"
                        android:background="@drawable/squared_corner_input_box"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/ubunturegular"
                        android:padding="@dimen/_10sdp"
                        android:autofillHints="" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@id/layout_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/text_email"
                        app:layout_constraintBottom_toTopOf="@id/edt_email_register"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_id"
                        android:fontFamily="@font/sourcesanssemibold"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/colortext"
                        android:layout_marginStart="@dimen/_5sdp"/>

                    <EditText
                        android:id="@+id/edt_email_register"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="0dp"
                        android:lines="1"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textCursorDrawable="@color/black"
                        android:layout_height="@dimen/_50sdp"
                        android:textColor="@color/colortext"
                        android:textColorHint="@color/colorHint"
                        android:hint="@string/admin_email_com"
                        android:background="@drawable/squared_corner_input_box"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/ubunturegular"
                        android:padding="@dimen/_10sdp"
                        android:autofillHints="" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_pass"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@id/layout_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/text_pass"
                        app:layout_constraintBottom_toTopOf="@id/edt_pass_register"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:fontFamily="@font/sourcesanssemibold"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/colortext"
                        android:layout_marginStart="@dimen/_5sdp"/>

                    <EditText
                        android:id="@+id/edt_pass_register"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="0dp"
                        android:lines="1"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:layout_height="@dimen/_50sdp"
                        android:textCursorDrawable="@color/black"
                        android:textColor="@color/colortext"
                        android:textColorHint="@color/colorHint"
                        android:hint="@string/pass"
                        android:background="@drawable/squared_corner_input_box"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/ubunturegular"
                        android:padding="@dimen/_10sdp"
                        android:autofillHints="" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_DobnPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_pass">

                    <TextView
                        android:id="@+id/text_dob"
                        app:layout_constraintBottom_toTopOf="@id/edt_dob_register"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_of_birth"
                        android:fontFamily="@font/sourcesanssemibold"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/colortext"
                        android:layout_marginStart="@dimen/_5sdp"/>

                    <EditText
                        android:id="@+id/edt_dob_register"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_width="0dp"
                        android:lines="1"
                        android:inputType="date"
                        android:singleLine="true"
                        android:layout_height="@dimen/_50sdp"
                        android:textColor="@color/colortext"
                        android:textColorHint="@color/colorHint"
                        android:hint="@string/dob"
                        android:textCursorDrawable="@color/black"
                        android:ems="8"
                        android:background="@drawable/squared_corner_input_box"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/ubunturegular"
                        android:padding="@dimen/_10sdp"
                        android:autofillHints="" />

                    <TextView
                        android:id="@+id/text_number"
                        app:layout_constraintBottom_toTopOf="@id/edt_dob_register"
                        app:layout_constraintStart_toEndOf="@id/text_dob"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phnum"
                        android:fontFamily="@font/sourcesanssemibold"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/colortext"
                        android:layout_marginStart="@dimen/_27sdp"/>

                    <EditText
                        android:id="@+id/edt_number"
                        app:layout_constraintStart_toEndOf="@id/edt_dob_register"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_width="0dp"
                        android:lines="1"
                        android:inputType="phone|number"
                        android:singleLine="true"
                        android:layout_height="@dimen/_50sdp"
                        android:ems="8"
                        android:textColor="@color/colortext"
                        android:textColorHint="@color/colorHint"
                        android:textCursorDrawable="@color/black"
                        android:hint="@string/phone_number"
                        android:background="@drawable/squared_corner_input_box"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:textSize="@dimen/_14ssp"
                        android:fontFamily="@font/ubunturegular"
                        android:padding="@dimen/_10sdp"
                        android:autofillHints="" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>