<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pingmesafe.MainActivity"
    android:id="@+id/login_layout">

    <RelativeLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_320sdp"
            android:src="@drawable/login_pic"
            android:gravity="top"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            android:fitsSystemWindows="true"
            android:cropToPadding="false"
            android:contentDescription="@string/app_name"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/elipse"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iconback"
            android:scaleY="1.6"
            android:scaleX="1.6"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_25sdp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_170sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pingmesafe"
                android:textSize="@dimen/_29ssp"
                android:textColor="@color/white"
                android:fontFamily="@font/interbold"/>

            <TextView
                android:layout_width="350sp"
                android:layout_height="match_parent"
                android:text="@string/an_open_source_disaster_recovery_and_management_app"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/intermedium"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <include layout="@layout/login_layout"
                android:layout_height="@dimen/_430sdp"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_210sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_progressbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:visibility="gone"
            android:background="@color/colorDarkbkgwithTransparency">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_centerInParent="true"
                android:progress="@integer/material_motion_duration_long_1"
                android:visibility="visible"
                android:background="@drawable/rounded_box_purple_all_corners_round"/>
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>